gitops/overlays/prod/celery-exporter-django-config-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-exporter-django
  namespace: app
spec:
  template:
    spec:
      containers:
        - name: celery-exporter
