gitops/overlays/prod/celery-worker-fastapi-serviceaccount-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-fastapi
  namespace: app
spec:
  template:
    spec:
      serviceAccountName: fastapi
