gitops/overlays/prod/django-serviceaccount-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: app
spec:
  template:
    spec:
      serviceAccountName: django
