gitops/overlays/prod/es-ca-mount-fastapi-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: app
spec:
  template:
    spec:
      containers:
        - name: fastapi
          volumeMounts:
            - name: es-ca-cert
              mountPath: /etc/ssl/es
              readOnly: true
      volumes:
        - name: es-ca-cert
          configMap:
            name: es-ca-cert
