gitops/overlays/prod/fastapi-serviceaccount-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: app
spec:
  template:
    spec:
      serviceAccountName: fastapi
